--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -335,19 +335,18 @@
                         item == Enum.GetName(DeliveryMethod.SevenToElevenC2C) ||
                         item == Enum.GetName(DeliveryMethod.SevenToEleven1))
                         {
-                            if (IsShippingMethodEnabled(item))
-                            {
+                           
                                 <label for="@item" class="form-label me-2">
                                     <input type="checkbox"
                                            class="form-check-input"
                                            id="@item"
-                                           disabled="@(EditGroupBuyDto.IsEnterprise)"
+                                           disabled="@(EditGroupBuyDto.IsEnterprise||!IsShippingMethodEnabled(item))"
                                            checked="@((EditGroupBuyDto.ExcludeShippingMethod is not null) &&
                                                       (EditGroupBuyDto.ExcludeShippingMethod.Contains(item)))"
                                            @onchange="(value) => OnShippingMethodCheckedChange(item, value)" />
                                     @L[item]
                                 </label>
-                            }
+                            
                             @if (item == Enum.GetName(DeliveryMethod.FamilyMartC2C)
                            || item == Enum.GetName(DeliveryMethod.BlackCat1))
                             {
@@ -370,21 +369,20 @@
                         item == Enum.GetName(DeliveryMethod.FamilyMartC2C) ||
                         item == Enum.GetName(DeliveryMethod.TCatDeliverySevenElevenNormal))
                         {
-                            if (IsShippingMethodEnabled(item))
-                            {
+                            
                                 <label for="@item" class="form-label me-2">
                                     <input type="checkbox"
                                            class="form-check-input"
                                            id="@item"
                                            disabled="@((EditGroupBuyDto.ExcludeShippingMethod is not null) &&
                                                    (EditGroupBuyDto.ExcludeShippingMethod.Contains("DeliveredByStore")) &&
-                                                   item is not "DeliveredByStore"||EditGroupBuyDto.IsEnterprise)"
+                                                   item is not "DeliveredByStore"||EditGroupBuyDto.IsEnterprise||!IsShippingMethodEnabled(item))"
                                            checked="@((EditGroupBuyDto.ExcludeShippingMethod is not null) &&
                                                   (EditGroupBuyDto.ExcludeShippingMethod.Contains(item)))"
                                            @onchange="(value) => OnShippingMethodCheckedChange(item, value)" />
                                     @L[item]
                                 </label>
-                            }
+                            
                             @if (item == Enum.GetName(DeliveryMethod.FamilyMartC2C)
                            || item == Enum.GetName(DeliveryMethod.BlackCat1))
                             {
@@ -404,19 +402,18 @@
                         if (item == Enum.GetName(DeliveryMethod.BlackCatFreeze) ||
                         item == Enum.GetName(DeliveryMethod.TCatDeliveryFreeze))
                         {
-                            if (IsShippingMethodEnabled(item))
-                            {
+                          
                                 <label for="@item" class="form-label me-2">
                                     <input type="checkbox"
                                            class="form-check-input"
                                            id="@item"
-                                           disabled="@(EditGroupBuyDto.IsEnterprise)"
+                                           disabled="@(EditGroupBuyDto.IsEnterprise||!IsShippingMethodEnabled(item))"
                                            checked="@((EditGroupBuyDto.ExcludeShippingMethod is not null) &&
                                                   (EditGroupBuyDto.ExcludeShippingMethod.Contains(item)))"
                                            @onchange="(value) => OnShippingMethodCheckedChange(item, value)" />
                                     @L[item]
                                 </label>
-                            }
+                            
                         }
                     }
                 }
@@ -428,21 +425,20 @@
                         item == Enum.GetName(DeliveryMethod.TCatDeliveryFreeze) ||
                         item == Enum.GetName(DeliveryMethod.TCatDeliverySevenElevenFreeze))
                         {
-                            if (IsShippingMethodEnabled(item))
-                            {
+                          
                                 <label for="@item" class="form-label me-2">
                                     <input type="checkbox"
                                            class="form-check-input"
                                            id="@item"
                                            disabled="@((EditGroupBuyDto.ExcludeShippingMethod is not null) &&
                                                        (EditGroupBuyDto.ExcludeShippingMethod.Contains("DeliveredByStore")) &&
-                                                       item is not "DeliveredByStore"||EditGroupBuyDto.IsEnterprise)"
+                                                       item is not "DeliveredByStore"||EditGroupBuyDto.IsEnterprise||!IsShippingMethodEnabled(item))"
                                            checked="@((EditGroupBuyDto.ExcludeShippingMethod is not null) &&
                                                       (EditGroupBuyDto.ExcludeShippingMethod.Contains(item)))"
                                            @onchange="(value) => OnShippingMethodCheckedChange(item, value)" />
                                     @L[item]
                                 </label>
-                            }
+                            
                         }
                     }
                 }
@@ -456,19 +452,18 @@
                         if (item == Enum.GetName(DeliveryMethod.BlackCatFrozen) ||
                         item == Enum.GetName(DeliveryMethod.TCatDeliveryFrozen))
                         {
-                            if (IsShippingMethodEnabled(item))
-                            {
+                          
                                 <label for="@item" class="form-label me-2">
                                     <input type="checkbox"
                                            class="form-check-input"
-                                           disabled="@(EditGroupBuyDto.IsEnterprise)"
+                                           disabled="@(EditGroupBuyDto.IsEnterprise||!IsShippingMethodEnabled(item))"
                                            id="@item"
                                            checked="@((EditGroupBuyDto.ExcludeShippingMethod is not null) &&
                                                   (EditGroupBuyDto.ExcludeShippingMethod.Contains(item)))"
                                            @onchange="(value) => OnShippingMethodCheckedChange(item, value)" />
                                     @L[item]
                                 </label>
-                            }
+                            
                         }
                     }
                 }
@@ -481,21 +476,20 @@
                         item == Enum.GetName(DeliveryMethod.SevenToElevenFrozen) ||
                         item == Enum.GetName(DeliveryMethod.TCatDeliverySevenElevenFrozen))
                         {
-                            if (IsShippingMethodEnabled(item))
-                            {
+                           
                                 <label for="@item" class="form-label me-2">
                                     <input type="checkbox"
                                            class="form-check-input"
                                            id="@item"
                                            disabled="@((EditGroupBuyDto.ExcludeShippingMethod is not null) &&
                                                        (EditGroupBuyDto.ExcludeShippingMethod.Contains("DeliveredByStore")) &&
-                                                       item is not "DeliveredByStore"||EditGroupBuyDto.IsEnterprise)"
+                                                       item is not "DeliveredByStore"||EditGroupBuyDto.IsEnterprise||!IsShippingMethodEnabled(item))"
                                            checked="@((EditGroupBuyDto.ExcludeShippingMethod is not null) &&
                                                       (EditGroupBuyDto.ExcludeShippingMethod.Contains(item)))"
                                            @onchange="(value) => OnShippingMethodCheckedChange(item, value)" />
                                     @L[item]
                                 </label>
-                            }
+                            
                         }
                     }
                 }
@@ -506,8 +500,7 @@
                 {
                     if (item == Enum.GetName(DeliveryMethod.HomeDelivery))
                     {
-                        if (IsShippingMethodEnabled(item))
-                        {
+                        
                             <label for="@item" class="form-label me-2">
                                 <input type="checkbox"
                                        class="form-check-input"
@@ -518,7 +511,7 @@
                                        @onchange="(value) => OnShippingMethodCheckedChange(item, value)" />
                                 @L[item]
                             </label>
-                        }
+                        
                     }
                     if (item == Enum.GetName(DeliveryMethod.DeliveredByStore) ||
                     item == Enum.GetName(DeliveryMethod.SelfPickup))
